--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(DeltaHashTable VERSION 0.0.1 LANGUAGES C CXX)
 
 enable_testing()
 
+add_library(bitvector OBJECT src/bitvector.h src/bitvector.cpp)
 add_library(bucket OBJECT src/bucket.h src/bucket.cpp)
 
 add_subdirectory(tests)
