Add get_lslot_id() tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,3 +14,8 @@ add_executable(bucket_tests bucket_tests.cpp)
 target_include_directories(bucket_tests PRIVATE ../src)
 target_link_libraries(bucket_tests PRIVATE GTest::gtest_main $<TARGET_OBJECTS:bucket>)
 gtest_discover_tests(bucket_tests)
+
+add_executable(entries_tests entries_tests.cpp)
+target_include_directories(entries_tests PRIVATE ../src)
+target_link_libraries(entries_tests PRIVATE GTest::gtest_main $<TARGET_OBJECTS:entries>)
+gtest_discover_tests(entries_tests)
