Build a single bucket object file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_library(bucket OBJECT bucket.h bucket.cpp)
-add_library(entries OBJECT entries.h entries.cpp)
+add_library(
+  bucket OBJECT
+  bucket.h bucket.cpp
+  entries.h entries.cpp
+)
