--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,5 +17,5 @@ gtest_discover_tests(bucket_tests)
 
 add_executable(entries_tests entries_tests.cpp)
 target_include_directories(entries_tests PRIVATE ../src)
-target_link_libraries(entries_tests PRIVATE GTest::gtest_main $<TARGET_OBJECTS:entries>)
+target_link_libraries(entries_tests PRIVATE GTest::gtest_main $<TARGET_OBJECTS:bucket>)
 gtest_discover_tests(entries_tests)
